# Offline_Whisper_App

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/hevalvural/whisper_task/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/hevalvural/whisper_task/: AudioRecorder.kt  MainActivity.kt  Utils.kt  WhisperLib.kt
app/src/main/java/com/hevalvural/whisper_task/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/hevalvural/whisper_task/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
